--- a/main.html
+++ b/main.html
@@ -6,8 +6,25 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="body">
 	<!-- the entire body must be written by student -->
+		<h1 class="text">My playlist</h1>
+		<ul class="list">
+			<li>song 1</li>
+			<li>song 2</li>
+			<li>song 3</li>
+			<li>song 4</li>
+			<li>song 5</li>
+		</ul>
+	<h2 class="text">Now Playing</h2>
+	<div class=".player_one">
+		<video src="https://www.w3schools.com/tags/movie.mp4"></video>
+		<h2  class="text">MP3 songs</h2>
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630">maan meri jaan</audio>
+		
+	</div>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
